--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,3 +19,6 @@ java_remove_download: true
 java_install_jce: false
 
 java_set_javahome: false
+java_use_proxy: false 
+java_remote_url: "http://download.oracle.com/otn-pub"
+java_proxy_url:
